--- a/ping.yml
+++ b/ping.yml
@@ -9,7 +9,7 @@
    ansible_connection: winrm
    ansible_winrm_server_cert_validation: ignore
    ansible_winrm_kerberos_delegation: yes
-   ansible_winrm_realm: CHUBBY.COM
+   #ansible_winrm_realm: CHUBBY.COM
    ansible_winrm_transport: kerberos
    ansible_winrm_service: HOST
  
