--- a/ping.yml
+++ b/ping.yml
@@ -3,13 +3,13 @@
 - name: ping servers
   hosts: dc
   vars:
-   ansible_user: sammydapo@CHUBBY.COM
+   ansible_user: sammydapo
    ansible_password: PAssword123
    ansible_port: 5985
    ansible_connection: winrm
    ansible_winrm_server_cert_validation: ignore
    ansible_winrm_kerberos_delegation: yes
-   #ansible_winrm_realm: CHUBBY.COM
+   ansible_winrm_realm: CHUBBY.COM
    ansible_winrm_transport: kerberos
    ansible_winrm_service: HOST
  
