--- a/test.yml
+++ b/test.yml
@@ -15,5 +15,5 @@
  
   tasks:
   - name: ping server
-    ansible.windows.win_shell: Invoke-Command -Computer JJayRDC -Scriptblock{Get-Date|out-file -filepath C:\DBA\CurrentDate.txt}
+    win_shell: Invoke-Command -Computer JJayRDC -Scriptblock{Get-Date|out-file -filepath C:\DBA\CurrentDate.txt}
     
