--- a/test2.yml
+++ b/test2.yml
@@ -16,5 +16,12 @@
  
   tasks:
   - name: create file
-    win_shell: $script ="https://raw.githubusercontent.com/ig212/Sammy/master/test.ps1"
-               Invoke-Expression $script
+    win_shell: $script= "https://raw.githubusercontent.com/ig212/Sammy/master/test2.ps1"
+               $rest=Invoke-RestMethod -uri $script -verbose|out-string
+               $rest2=$rest.Trim()
+               Invoke-Expression -Command $rest2 -Verbose
+    vars:
+      ansible_become: yes
+      ansible_become_method: runas
+      ansible_become_user: CHUBBY\sammydapo
+      ansible_become_password: PAssword123
