--- a/test2.yml
+++ b/test2.yml
@@ -19,8 +19,7 @@
     win_shell:
       $script= "https://raw.githubusercontent.com/ig212/Sammy/master/test2.ps1"
       $rest=Invoke-RestMethod -Uri $script|out-string
-      $rest2=$rest.Trim()
-      Invoke-Expression -Command $rest -Verbose
+      Invoke-Command -ComputerName JayRDC -ScriptBlock{$rest}
     vars:
       ansible_become: yes
       ansible_become_method: runas
