--- a/test2.yml
+++ b/test2.yml
@@ -17,9 +17,9 @@
   tasks:
   - name: create file
     win_shell:
-      $script= "https://raw.githubusercontent.com/ig212/Sammy/master/test2.ps1"
-      $rest=Invoke-RestMethod -Uri $script|out-string
-      Invoke-Command -ComputerName JayRDC -ScriptBlock{$rest}
+      $script= "https://raw.githubusercontent.com/ig212/Sammy/master/test2.ps1";
+      $rest=Invoke-RestMethod -Uri $script|out-string;
+      Invoke-Expression -Command $rest
     vars:
       ansible_become: yes
       ansible_become_method: runas
